--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  p I'm Bharath
+  button(type="button", class="btn btn-secondary") Press Me for the contents
