--- a/views/index.pug
+++ b/views/index.pug
@@ -4,4 +4,13 @@ block content
   h1= title
   p Welcome to #{title}
   p I'm Bharath
-  button(type="button", class="btn btn-secondary") Press Me for the contents
+  button(type="button", class="btn btn-secondary", onclick="update()") Press Me for the contents
+  p 
+  div(id="target") Display
+  script.
+    var client_count=0;
+    function update(){
+      client_count+=1;
+      document.getElementById("target").innerHTML="Value Now "+client_count  ;
+    } 
+  a(href="planes") Go to Planes Page 
